--- a/app/src/main/res/layout/activity_learn2_2.xml
+++ b/app/src/main/res/layout/activity_learn2_2.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.waqee.syed.learn2.Activity2">
+    tools:context="com.waqee.syed.learn2.Activity2"
+    android:background="#f1f1">
 
 </RelativeLayout>
