--- a/app/src/main/res/layout/activity_learn2_2.xml
+++ b/app/src/main/res/layout/activity_learn2_2.xml
@@ -8,6 +8,6 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.waqee.syed.learn2.Activity2"
-    android:background="#f1f1">
+    android:background="#f29">
 
 </RelativeLayout>
